--- a/brief 3/contact.html
+++ b/brief 3/contact.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="style-header-footer.css">
     <link rel="stylesheet" href="style-contact.css">
     <meta charset="UTF-8">
+    <meta name="description" content="rental car website">
+    <meta name="keywords" content="rent car, rental cars, rent a car">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CONTACT</title>
     <script src="https://kit.fontawesome.com/5832cfab36.js" crossorigin="anonymous"></script>
     <script src="script-contact.js"></script>
 </head>
@@ -47,7 +49,6 @@
         </form>
     </div>
 
-
     <!-- ****************** FOOTER **********
     ************ -->
     <footer>
@@ -75,7 +76,7 @@
                 </div>
                 <div class="flex-item-right">
                     <center><img src="images/logo-racmilcar.png" alt="logo">
-                        <p>Copyright 2019 All Right Reserved By CLK LUXURY</p>
+                        <p>Copyright 2019 All Right Reserved By RACMILCAR</p>
                     </center>
                 </div>
             </div>
