--- a/brief 3/gallery.html
+++ b/brief 3/gallery.html
@@ -3,12 +3,13 @@
 <head>
     <link rel="stylesheet" href="style-header-footer.css">
     <link rel="stylesheet" href="style-gallery.css">
-    
+    <meta name="description" content="rental car website">
+    <meta name="keywords" content="rent car, rental cars, rent a car">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GALLERY</title>
     <script src="https://kit.fontawesome.com/5832cfab36.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -30,22 +31,6 @@
     </nav>
 </header>
 <!-- ****************** END HEADER ***************** -->
-<!-- <div class="margin-test">
- 
-
-<section >
-    
-   <div class="wrapper-container-renault">   
-       <div class="name-car"> <img src="img-renault/kadjar.com_product_model_FEH_nouveau-kadjar_c_A-TERPR" alt=""><h3>kadjar</h3></div>
-       <div class="name-car"><img src="img-renault/nouveau captur.com_product_model_CP1_nouveau-captur_c_A-TEEPY" alt=""><h6>yassine</h6></div>
-       <div class="name-car"><img src="img-renault/nouvelle clio.com_product_model_CL5_clio5_c_A-TERQH" alt=""><h6>yassine</h6></div>
-       <div class="name-car"><img src="img-renault/nouvelle mégane.com_product_model_MB4_megane_c_A-TEKQA" alt=""><h6>yassine</h6></div>
-       <div class="name-car"><img src="img-renault/nouvelle talisman.com_product_model_FDL_talisman_c_A-TEKQA" alt=""><h6>yassine</h6></div>
-   
-   </div>
-</section>
-</div> -->
-
 
  <!--image card layout start-->
  <div class="container">
@@ -53,7 +38,7 @@
     <div class="row">
       <!--image card start-->
       <div class="image">
-        <img src="images/gallery/clio2020.png" alt="">
+        <img src="images/gallery/clio2020.png" alt="clio">
         <div class="details">
           <h2>Clio 4 2020</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -102,7 +87,7 @@
       <!--image card end-->
       <!--image card start-->
       <div class="image">
-        <img src="images/gallery/toyota camry.png" alt="">
+        <img src="images/gallery/toyota camry.png" alt="camry">
         <div class="details">
           <h2>toyota camry</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -139,7 +124,7 @@
             </div>
             <div class="flex-item-right">
                 <center><img src="images/logo-racmilcar.png" alt="logo">
-                <p>Copyright 2019 All Right Reserved By CLK LUXURY</p></center>
+                <p>Copyright 2019 All Right Reserved By RACMILCAR</p></center>
             </div>
         </div> 
     </div>
