--- a/brief 3/home.html
+++ b/brief 3/home.html
@@ -3,10 +3,12 @@
 <head>
     <link rel="stylesheet" href="style-header-footer.css">
     <link rel="stylesheet" href="style-home.css">
+    <meta name="description" content="rental car website">
+    <meta name="keywords" content="rent car, rental cars, rent a car">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HOME</title>
     <script src="https://kit.fontawesome.com/5832cfab36.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -78,7 +80,7 @@
             </div>
             <div class="flex-item-right">
                 <center><img src="images/logo-racmilcar.png" alt="logo">
-                <p>Copyright 2019 All Right Reserved By CLK LUXURY</p></center>
+                <p>Copyright 2019 All Right Reserved By RACMILCAR</p></center>
             </div>
         </div> 
     </div>
