--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        </label>
        <label class="logo-header"><img src="images/logo-racmilcar.png" alt="logo"></label>
         <ul>
-            <li><a class="active" href="home.html">home</a></li>
+            <li><a class="active" href="index.html">home</a></li>
             <li><a href="gallery.html">gallery</a></li>
             <li><a href="reservation.html">reservation</a></li>
             <li><a href="contact.html">contact</a></li>
