--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
        </label>
        <label class="logo-header"><img src="images/logo-racmilcar.png" alt="logo"></label>
         <ul>
-            <li><a  href="home.html">home</a></li>
+            <li><a  href="index.html">home</a></li>
             <li><a class="active" href="gallery.html">gallery</a></li>
             <li><a href="reservation.html">reservation</a></li>
             <li><a href="contact.html">contact</a></li>
