--- a/reservation.html
+++ b/reservation.html
@@ -24,7 +24,7 @@
        </label>
        <label class="logo-header"><img src="images/logo-racmilcar.png" alt="logo"></label>
         <ul>
-            <li><a  href="home.html">home</a></li>
+            <li><a  href="index.html">home</a></li>
             <li><a  href="gallery.html">gallery</a></li>
             <li><a class="active" href="reservation.html">reservation</a></li>
             <li><a href="contact.html">contact</a></li>
